--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,9 +1,10 @@
 <h1>Ajouter User</h1>
 <br>
 <br>
-<table>
+
+<div class="col-lg-1 col-offset-6 centered">
 <%= form_for @user do |e| %>
-  <div class="form-group">
+  <div class="form-group" >
     <label>User_id : </label>
     <%= e.text_field :user_id %>
   </div>
@@ -15,4 +16,4 @@
     <button type="submit" class="btn btn-primary">Ajouter</button>
   </div>
 <%end %>
-</table>
+  </div>
