--- a/app/views/usersstats/test.html.erb
+++ b/app/views/usersstats/test.html.erb
@@ -1,9 +1,11 @@
-<h1>User Behavioral Stats</h1>
-<table class="table table-dark">
-  <tr>
+<center><h1>User Behavioral Stats</h1></center>
+<br>
+<br>
+<table class="table table-striped">
+  <tr >
     <td>user_id</td><td>app_launched</td><td>most_active_day_last_7_days</td><td>number_of_days_active_last_7_days</td><td>most_launched_app_last_7_days</td>
   </tr>
-  <tr>
+  <tr >
     <td><%= @userstat.user_id %></td>
     <td><%= @userstat.app_launched %></td>
     <td><%= @userstat.most_active_day_last_7_days %></td>
